# webhook-transformer

./: Cargo.toml  Makefile  README.md  flake.nix
.github/workflows/: docker.yaml
examples/: input.json
examples/alertmanager-to-ntfy/: config.jsonnet  input.json  output.json
examples/basic/: config.jsonnet  output.json
examples/noop/: config.jsonnet
src/: lib.rs  main.rs
