[package]
name = "webhook-transformer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
clap = { version = "4.4.18", features = ["derive"] }
jrsonnet-evaluator = "0.5.0-pre95"
jrsonnet-stdlib = "0.5.0-pre95"
reqwest = { version = "0.11.23", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
http-body-util = "0.1"
mime = "0.3"
tower = "0.4"
